[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/board/unit_stats.gd" type="Script" id=1]
[ext_resource path="res://scenes/map_editor/tile_view.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/courier_big.tres" type="FontFile" id=3]
[ext_resource path="res://scenes/ui/icons/star.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/gui/editor/circle.png" type="Texture2D" id=5]

[node name="unit_stats" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
offset_left = -400.0
offset_top = -225.0
offset_right = 400.0
offset_bottom = 225.0
color = Color( 0.196078, 0.196078, 0.196078, 0.823529 )
__meta__ = {
"_editor_description_": ""
}

[node name="tile_view" parent="background" instance=ExtResource( 2 )]
position = Vector2( 80, 110 )

[node name="level1" type="Node2D" parent="background"]
visible = false
position = Vector2( 20, 130 )

[node name="star" parent="background/level1" instance=ExtResource( 4 )]
position = Vector2( 60, -70 )

[node name="level2" type="Node2D" parent="background"]
visible = false
position = Vector2( 20, 130 )

[node name="star" parent="background/level2" instance=ExtResource( 4 )]
position = Vector2( 50, -70 )

[node name="star2" parent="background/level2" instance=ExtResource( 4 )]
position = Vector2( 70, -70 )

[node name="level3" type="Node2D" parent="background"]
visible = false
position = Vector2( 20, 130 )

[node name="star" parent="background/level3" instance=ExtResource( 4 )]
position = Vector2( 50, -65 )

[node name="star2" parent="background/level3" instance=ExtResource( 4 )]
position = Vector2( 70, -65 )

[node name="star3" parent="background/level3" instance=ExtResource( 4 )]
position = Vector2( 60, -80 )

[node name="unit_name" type="Label" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = -393.0
theme_override_fonts/font = ExtResource( 3 )
text = "Infantry"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="hp_label" type="Label" parent="background"]
offset_left = 150.0
offset_top = 60.0
offset_right = 250.0
offset_bottom = 80.0
text = "TR_HP"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="hp_value" type="Label" parent="background/hp_label"]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
text = "10/10"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="armour_label" type="Label" parent="background"]
offset_left = 150.0
offset_top = 80.0
offset_right = 250.0
offset_bottom = 100.0
text = "TR_ARMOUR"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="armour_value" type="Label" parent="background/armour_label"]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
text = "1"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ap_label" type="Label" parent="background"]
offset_left = 150.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 120.0
text = "TR_MP"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ap_value" type="Label" parent="background/ap_label"]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
text = "4/4"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="attack_label" type="Label" parent="background"]
offset_left = 150.0
offset_top = 120.0
offset_right = 250.0
offset_bottom = 140.0
text = "TR_ATTACK"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="attack_value" type="Label" parent="background/attack_label"]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
text = "6"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="level_label" type="Label" parent="background"]
offset_left = 150.0
offset_top = 140.0
offset_right = 250.0
offset_bottom = 160.0
text = "TR_LEVEL"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="level_value" type="Label" parent="background/level_label"]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="kills_label" type="Label" parent="background"]
offset_left = 150.0
offset_top = 160.0
offset_right = 250.0
offset_bottom = 180.0
text = "TR_KILLS"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="kills_value" type="Label" parent="background/kills_label"]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 20.0
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="abilities" type="Node2D" parent="background"]
position = Vector2( 400, 60 )

[node name="ab1" type="Node2D" parent="background/abilities"]
position = Vector2( 0, 45 )

[node name="bg" type="Sprite2D" parent="background/abilities/ab1"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 50, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="label" type="Label" parent="background/abilities/ab1"]
offset_left = 100.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = -20.0
text = "Heavy Weapon"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="description" type="Label" parent="background/abilities/ab1"]
offset_left = 110.0
offset_top = -20.0
offset_right = 380.0
offset_bottom = 50.0
text = "Heavy Weapon"
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="anchor" type="Node2D" parent="background/abilities/ab1"]
position = Vector2( 50, 0 )

[node name="ab2" type="Node2D" parent="background/abilities"]
position = Vector2( 0, 150 )

[node name="bg" type="Sprite2D" parent="background/abilities/ab2"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 50, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="label" type="Label" parent="background/abilities/ab2"]
offset_left = 100.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = -20.0
text = "Heavy Weapon"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="description" type="Label" parent="background/abilities/ab2"]
offset_left = 110.0
offset_top = -20.0
offset_right = 380.0
offset_bottom = 50.0
text = "Heavy Weapon"
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="anchor" type="Node2D" parent="background/abilities/ab2"]
position = Vector2( 50, 0 )

[node name="ab3" type="Node2D" parent="background/abilities"]
position = Vector2( 0, 255 )

[node name="bg" type="Sprite2D" parent="background/abilities/ab3"]
modulate = Color( 1, 1, 1, 0.823529 )
position = Vector2( 50, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="label" type="Label" parent="background/abilities/ab3"]
offset_left = 100.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = -20.0
text = "Heavy Weapon"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="description" type="Label" parent="background/abilities/ab3"]
offset_left = 110.0
offset_top = -20.0
offset_right = 380.0
offset_bottom = 50.0
text = "Heavy Weapon"
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="anchor" type="Node2D" parent="background/abilities/ab3"]
position = Vector2( 50, 0 )

[node name="passive" type="Node2D" parent="background"]
position = Vector2( 20, 200 )

[node name="label" type="Label" parent="background/passive"]
offset_right = 350.0
offset_bottom = 30.0
text = "Heavy Weapon"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="description" type="Label" parent="background/passive"]
offset_top = 30.0
offset_right = 350.0
offset_bottom = 130.0
text = "Heavy Weapon"
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="back_button" type="Button" parent="."]
offset_left = -50.0
offset_top = 185.0
offset_right = 50.0
offset_bottom = 215.0
text = "TR_BACK"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
